src/objects/Scope_Change__c.object
<CustomObject>
    <fields>
        <fullName>Account_Billing_City__c</fullName>
        <formula>Account__r.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Billing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Billing_State_Province__c</fullName>
        <formula>Account__r.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Billing State/Province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Billing_Street__c</fullName>
        <formula>Account__r.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Billing Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Billing_ZIP__c</fullName>
        <formula>Account__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Billing ZIP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Scope Changes</relationshipLabel>
        <relationshipName>Scope_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Anticipated_Time_to_Complete__c</fullName>
        <label>Anticipated Time to Complete</label>
        <picklist>
            <picklistValues>
                <fullName>&lt; 1 Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 Business Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-5 Business Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-7 Business Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 7 Business Days</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label># Hours</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Scope Changes</relationshipLabel>
        <relationshipName>Scope_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Scope_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Appirio_PSAe__Proj__c</referenceTo>
        <relationshipLabel>Scope Changes</relationshipLabel>
        <relationshipName>Scope_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Scope Changes</relationshipLabel>
        <relationshipName>Scope_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>Hours__c  *  Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Scope Change</label>
    <nameField>
        <label>Scope Change Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scope Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>